--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<h1>Resume</h1>
+<h1>Gioi thieu</h1>
 <h2>Bob</h2>
 <img id="rcorners1" src="https://scontent.fsgn5-9.fna.fbcdn.net/v/t1.6435-9/158840030_1885932838228984_123318852469689821_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=a4a2d7&_nc_ohc=CtWI6vhaCSwAX-leyV1&_nc_ht=scontent.fsgn5-9.fna&oh=00_AfAg2on855TLo8niYUGLxwFYBOB-neMjKwOpK7FG2rqfVg&oe=6401CFFE" width="150px" heught="150px"/><br>
  <hr style="solid">
